# conductor

./: .gitignore  .gitmodules  CMakeLists.txt  assumptions.md  conductor.sh  config.yml  keyhole_config.yml  palantir_config.yml  requirements.txt
python/: onset.py
src/: Bootstrapper.cpp  Bootstrapper.h  Config.cpp  Config.h  Main.cpp
src/audioProcessor/: AudioFileWriter.cpp  AudioFileWriter.h  AudioProcessor.h  AudioProcessorSink.cpp  AudioProcessorSink.h  AudioProcessorSuite.cpp  AudioProcessorSuite.h  AudioStreamSource.cpp  AudioStreamSource.h  BandpassProcessor.cpp  BandpassProcessor.h  DisplaySignalProcessor.cpp  DisplaySignalProcessor.h  EqualizerProcessor.cpp  EqualizerProcessor.h  FileWriter.h  HarmonicTransformProcessor.cpp  HarmonicTransformProcessor.h  MaterializationProcessor.cpp  MaterializationProcessor.h  MelFilterBankProcessor.cpp  MelFilterBankProcessor.h  MelFilterbankProcessor.cpp  MelFilterbankProcessor.h  OnsetProcessor.cpp  OnsetProcessor.h  PacketTypeConverter.h  PitchProcessor.cpp  PitchProcessor.h  STFTProcessor.cpp  STFTProcessor.h  SpecfluxMunger.cpp  SpecfluxMunger.h  SpectrogramProcessor.cpp  SpectrogramProcessor.h  TimbralTransformProcessor.cpp  TimbralTransformProcessor.h
src/audioProcessor/fileWriter/: FileWriter.cpp  FileWriter.h  RawAudioFileWriter.cpp  RawAudioFileWriter.h  STFTFileWriter.cpp  STFTFileWriter.h
src/audioProcessor/onsetProcessor/: CuriousOnsetDetector.cpp  CuriousOnsetDetector.h  CuriousPerceptron.cpp  CuriousPerceptron.h  OnsetAggregator.cpp  OnsetAggregator.h  OnsetProcessor.cpp  OnsetProcessor.h  SpecFluxOnsetProcessor.cpp  SpecFluxOnsetProcessor.h
src/audioStream/: AudioFileReader.cpp  AudioFileReader.h  AudioFileStream.cpp  AudioFileStream.h  AudioInput.cpp  AudioInput.h  AudioStream.h  AudioStreamManager.cpp  AudioStreamManager.h  AudioUtils.cpp  AudioUtils.h  RingBuffer.cpp  RingBuffer.h
src/packet/: AudioPacket.cpp  AudioPacket.h  Cleanable.h  DisplaySignalPacket.cpp  DisplaySignalPacket.h  FileWritable.h  HarmonicTransformPacket.cpp  HarmonicTransformPacket.h  MelSignalPacket.cpp  MelSignalPacket.h  NotSerializableException.h  OnsetPacket.cpp  OnsetPacket.h  Packet.h  PacketCollection.cpp  PacketCollection.h  PacketCollectionManager.h  PacketConduit.cpp  PacketConduit.h  PacketConduitCurator.cpp  PacketConduitCurator.h  PacketDispatcher.h  PacketPublisher.cpp  PacketPublisher.h  PacketReceiver.h  PacketSpout.cpp  PacketSpout.h  PacketSubscriber.cpp  PacketSubscriber.h  PitchPacket.cpp  PitchPacket.h  RawAudioPacket.cpp  RawAudioPacket.h  STFTPacket.cpp  STFTPacket.h  Serializable.h  Signal.h  SpectrogramPacket.cpp  SpectrogramPacket.h
src/python/: PythonInterpreterManager.cpp  PythonInterpreterManager.h
test/: CMakeLists.txt  CMakeLists.txt.in
test/audioStream/: RingBufferTest.cpp
test/packet/: AudioPacketTest.cpp  PacketCollectionManagerMock.h  PacketConduitTest.cpp  PacketMock.h  PacketPublisherTest.cpp
test/stream/: RingBufferTest.cpp
